pkl-core/src/test/files/LanguageSnippetTests/input/errors/cannotChangeFixed2.pkl
abstract class Animal {
  name: String
}

class Dog extends Animal {
  fixed name = "Spot"
}
